# file-loader

./: .gitignore  Cargo.toml  package-lock.json
libs/pdf-extract/: Cargo.toml
libs/pdf-extract/src/: lib.rs
src/: lib.rs
src/PdfLoader/: pdf.rs
src/pdf_loader/: pdf.rs
www/: index.html  index.js  package-lock.json  package.json
